objects/Coaching__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Amount__c</fullName>
        <label>Max Amount</label>
        <summarizedField>student1__c.Total_fees_paid__c</summarizedField>
        <summaryForeignKey>student1__c.Coaching1__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Modules_List__c</fullName>
        <label>Modules List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC Admin</fullName>
                </value>
                <value>
                    <fullName>SFDC Dev</fullName>
                </value>
                <value>
                    <fullName>SFDC Lightning</fullName>
                </value>
                <value>
                    <fullName>AWS admin</fullName>
                </value>
                <value>
                    <fullName>SAAS Dev</fullName>
                </value>
                <value>
                    <fullName>SAAS Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_List__c</fullName>
        <label>Staff List</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balu</fullName>
                </value>
                <value>
                    <fullName>John</fullName>
                </value>
                <value>
                    <fullName>Mohan</fullName>
                </value>
                <value>
                    <fullName>Ravi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>students_count__c</fullName>
        <label>students count</label>
        <summaryForeignKey>student1__c.Coaching1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Coaching</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Staff_List__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Coaching Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COachings</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>One_to_One_training</fullName>
        <active>true</active>
        <errorConditionFormula>IF(students_count__c &gt;1,true,false)</errorConditionFormula>
        <errorMessage>this is one to one training, u should not add more</errorMessage>
    </validationRules>
</CustomObject>